--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,57 @@
-# Node.js dependencies
+# ========================
+# Node modules
+# ========================
 node_modules/
-npm-debug.log
-yarn-error.log
-yarn.lock
-package-lock.json
+# Server node_modules
+/server/node_modules/
+# Client node_modules
+/client/node_modules/
 
-# Environment variables
+# ========================
+# Build / Output
+# ========================
+# Angular build output
+/client/dist/
+/client/out-tsc/
+/client/.angular
+/client/.angular/cache
+# Optional server build/output if any
+/server/dist/
+/server/build/
+
+# ========================
+# Environment / Config
+# ========================
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
-# Build output
-/dist
-/build
-/public/build
-
+# ========================
 # Logs
-logs/
+# ========================
+logs
 *.log
-*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Temporary files
-*.tmp
-*.temp
-*.swp
-*.swo
-
-# Coverage reports
-coverage/
-.nyc_output
-
-# IDE and editor files
+# ========================
+# IDE / Editor
+# ========================
 .vscode/
 .idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.swp
 *.sublime-project
 *.sublime-workspace
 
-# OS-specific files
+# ========================
+# OS / System files
+# ========================
 .DS_Store
 Thumbs.db
-
-# Express.js specific
-/public/uploads
-/sessions
+Desktop.ini
