--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,10 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@formulajs/formulajs": "^4.5.4",
     "@primeuix/themes": "^1.2.5",
+    "dayjs": "^1.11.19",
+    "lodash": "^4.17.21",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,6 +46,7 @@
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.20",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
