--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,6 @@
     "angular-resizable-element": "^8.0.0",
     "dayjs": "^1.11.19",
     "lodash": "^4.17.21",
-    "normalize.css": "^8.0.1",
-    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
@@ -48,6 +46,7 @@
     "@angular/build": "^20.3.9",
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.20",
     "jasmine-core": "~5.9.0",
@@ -56,7 +55,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-primeui": "^0.6.1",
     "typescript": "~5.9.2"
   }
 }
