--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.0",
     "@elysiajs/openapi": "^1.4.11",
     "@types/pg": "^8.15.6",
     "dotenv": "^17.2.3",
