--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/google": "^2.0.44",
     "@ai-sdk/mcp": "^0.0.11",
     "@ai-sdk/openai": "^2.0.80",
+    "@ai-sdk/xai": "^2.0.39",
     "@elysiajs/cors": "^1.4.0",
     "@elysiajs/openapi": "^1.4.11",
     "@types/pg": "^8.15.6",
