--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "@formulajs/formulajs": "^4.5.4",
     "@primeuix/themes": "^1.2.5",
+    "ace-builds": "^1.43.5",
     "angular-resizable-element": "^8.0.0",
     "dayjs": "^1.11.19",
     "lodash": "^4.17.21",
