--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "concurrently": "^8.0.0"
   },
   "dependencies": {
-    "chalk": "^5.6.2"
+    "chalk": "^5.6.2",
+    "quill": "^2.0.3"
   }
 }
