feat: standardize naming to "polar-base" across configuration and source files, update database references, and remove obsolete database files

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polarbase-client",
+  "name": "polar-base-client",
   "version": "1.0.0",
   "keywords": [],
   "author": "Qui Nguyen",
