--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polarbase-server",
+  "name": "polar-base-server",
   "version": "1.0.0",
   "keywords": [],
   "author": "Qui Nguyen",
