--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "polar-base",
+  "private": true,
   "version": "1.0.0",
   "keywords": [],
   "author": "Qui Nguyen",
   "license": "MIT",
   "description": "Talk to your database, chill while AI handles the SQL",
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
     "start": "concurrently \"npm run dev --prefix server\" \"npm run start --prefix client\"",
     "build": "npm run build --prefix client"
