refactor: update PostgreSQL configuration and connection settings, enhance WebSocket client management, and adjust REST rate limit handling for improved performance and scalability

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@elysiajs/openapi": "^1.4.11",
     "@types/pg": "^8.15.6",
     "ai": "^5.0.108",
+    "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "elysia": "latest",
     "fastmcp": "^3.22.0",
