--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
