--- a/server/.env.example
+++ b/server/.env.example
@@ -33,7 +33,7 @@ REALTIME_MAX_CLIENTS=1000
 # PostgreSQL
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=polarbase
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=P@ssw0rd2025
 POSTGRES_DATABASE=polarbase
 POSTGRES_SSL=false
