feat: add AGENT_BLACKLISTED_TABLES configuration for enhanced table access control
- Introduced AGENT_BLACKLISTED_TABLES environment variable in docker-compose and .env.example for specifying forbidden tables.
- Updated table loading logic in the agent to filter out blacklisted tables based on the new configuration.
- Refactored TableService and TableRecordService to remove reliance on constructor-based blacklisting, simplifying the codebase.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       # AGENT API
       - AGENT_ENABLED=true
       - AGENT_PREFIX=/agent
+      - AGENT_BLACKLISTED_TABLES=
 
       # MCP Server
       - MCP_ENABLED=true
