--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,7 @@ services:
       - POSTGRES_DB=polarbase
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./sample.sql:/docker-entrypoint-initdb.d/sample.sql # To skip: comment or remove this line
     ports:
       - '5432:5432'
     restart: unless-stopped
