refactor: streamline Docker and Nginx configurations
- Removed unnecessary build arguments from Dockerfile and updated the build command to use a fixed production configuration.
- Simplified the README by eliminating development environment instructions.
- Enhanced Nginx configuration to include detailed comments and added support for REST API and WebSocket proxying.
- Updated environment files to use relative API and WebSocket URLs for better compatibility across environments.
- Adjusted proxy configuration to ensure proper path rewriting for API and WebSocket requests.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,8 +9,7 @@ RUN bun install
 COPY client/ .
 
 # Build
-ARG NG_CONFIG=production
-RUN bun ng build --configuration=${NG_CONFIG}
+RUN bun ng build --configuration=production
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
