--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,20 +2,53 @@ server {
     listen 80;
     server_name localhost;
 
+    # Path to the compiled Angular application
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve Angular SPA
+    # 1. Handle Angular Routing (Single Page Application)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy all API calls to backend (optional)
-    # location /api/ {
-    #     proxy_pass http://server:3000/;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+    # 2. REST API Proxy
+    # Matches the "/api/" configuration in your proxy.conf.json
+    location /api/ {
+        # 'server' must match the service name defined in your docker-compose.yml
+        # The trailing slash "/" in proxy_pass is crucial for path rewriting
+        proxy_pass http://server:3000/; 
+        
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Connection timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # 3. WebSocket Proxy
+    # Matches the "/ws/" configuration in your proxy.conf.json
+    location /ws/ {
+        proxy_pass http://server:3000/;
+        
+        # Mandatory headers to upgrade HTTP connection to WebSocket
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        
+        # Extended timeouts for persistent WebSocket connections
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
+    }
+
+    # Optional: Gzip Compression for better performance
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
