feat: update Docker configuration for Nginx and backend URL
- Set BACKEND_URL environment variable in Dockerfile for dynamic API endpoint configuration.
- Changed Nginx configuration file path to use a template format for better flexibility.
- Updated proxy_pass directives in nginx.conf to utilize the BACKEND_URL variable for API and WebSocket requests.

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -12,11 +12,9 @@ server {
     }
 
     # 2. REST API Proxy
-    # Matches the "/api/" configuration in your proxy.conf.json
     location /api/ {
-        # 'server' must match the service name defined in your docker-compose.yml
         # The trailing slash "/" in proxy_pass is crucial for path rewriting
-        proxy_pass http://server:3000/; 
+        proxy_pass ${BACKEND_URL}/;
         
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -31,9 +29,9 @@ server {
     }
 
     # 3. WebSocket Proxy
-    # Matches the "/ws/" configuration in your proxy.conf.json
     location /ws/ {
-        proxy_pass http://server:3000/;
+        # The trailing slash "/" in proxy_pass is crucial for path rewriting
+        proxy_pass ${BACKEND_URL}/;
         
         # Mandatory headers to upgrade HTTP connection to WebSocket
         proxy_http_version 1.1;
