chore: update project configuration and enhance GeoPoint field functionality
- Updated package versions and added new dependencies for Leaflet support.
- Modified bun.lock and package.json to reflect version changes and new author information.
- Enhanced the GeoPoint field component with a map picker for improved location selection.
- Updated styles to include Leaflet's CSS and adjusted HTML structure for better user interaction.

--- a/client/angular.json
+++ b/client/angular.json
@@ -26,6 +26,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "../node_modules/leaflet/dist/images/",
+                "output": "./media/"
               }
             ],
             "styles": ["src/styles.scss"],
