--- a/client/package.json
+++ b/client/package.json
@@ -49,9 +49,11 @@
     "@angular/router": "^20.3.0",
     "@formulajs/formulajs": "^4.5.4",
     "@primeuix/themes": "^1.2.5",
+    "@types/leaflet": "^1.9.21",
     "ace-builds": "^1.43.5",
     "angular-resizable-element": "^8.0.0",
     "dayjs": "^1.11.19",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
