--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polarbase-server",
-  "version": "0.1.0",
+  "version": "0.2.0-beta",
   "keywords": [
     "postgresql",
     "backend-as-a-service",
