--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       # Core
       - NODE_ENV=production
       - NAME=PolarBase
+      - VERSION=v0.3.0-beta
       - HOSTNAME=0.0.0.0
       - PORT=3000
       - VERBOSE=false
