--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polarbase-server",
-  "version": "0.3.0-beta",
+  "version": "0.3.1-beta",
   "keywords": [
     "postgresql",
     "backend-as-a-service",
@@ -39,6 +39,7 @@
     "elysia": "latest",
     "fastmcp": "^3.22.0",
     "knex": "^3.1.0",
+    "lru-cache": "^11.2.4",
     "mysql": "^2.18.1",
     "pg": "^8.16.3",
     "pg-logical-replication": "^2.2.1",
