--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@ai-sdk/xai": "^2.0.39",
     "@elysiajs/cors": "^1.4.0",
     "@elysiajs/openapi": "^1.4.11",
+    "@elysiajs/static": "^1.4.7",
     "@types/pg": "^8.15.6",
     "ai": "^5.0.108",
     "chalk": "^5.6.2",
