feat: enhance component configurations and user prompts
- Added standalone configuration for Angular pipes to improve modularity.
- Updated HTML templates for confirmation dialogs and toast notifications to include `appendTo="body"` for better positioning.
- Refined confirmation messages in various components for clarity and consistency, ensuring users are prompted with clear actions before deletion.

--- a/client/angular.json
+++ b/client/angular.json
@@ -9,6 +9,9 @@
         "@schematics/angular:component": {
           "standalone": true,
           "style": "scss"
+        },
+        "@schematics/angular:pipe": {
+          "standalone": true
         }
       },
       "root": "",
