chore: update Dockerfile to create uploads directory
- Added a command to create the /app/uploads directory in the Dockerfile to prepare for file uploads during the build process.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,7 @@
 # Stage 1: Build Angular production
 FROM oven/bun:1 AS builder
 WORKDIR /app
+RUN mkdir -p /app/uploads
 
 # Cache dependencies
 COPY client/package.json ./
