chore: update PostgreSQL password and license year
- Updated PostgreSQL password  in docker-compose.yaml, .env.example, and pg.ts files for consistency.
- Revised copyright year in LICENSE file from 2025 to 2025-2026.

--- a/server/.env.example
+++ b/server/.env.example
@@ -37,8 +37,8 @@ REALTIME_MAX_CLIENTS=1000
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=P@ssw0rd2025
-POSTGRES_DATABASE=polarbase
+POSTGRES_PASSWORD=P@ssw0rd2026
+POSTGRES_DB=polarbase
 POSTGRES_SSL=false
 POSTGRES_MAX_CONNECTIONS=20
 
