--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@fullcalendar/angular": "^6.1.20",
     "@fullcalendar/core": "^6.1.20",
     "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
     "@primeuix/themes": "^1.2.5",
     "@types/leaflet": "^1.9.21",
     "ace-builds": "^1.43.5",
