--- a/client/angular.json
+++ b/client/angular.json
@@ -107,6 +107,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "../node_modules/leaflet/dist/images/",
+                "output": "./media/"
               }
             ],
             "styles": ["src/styles.scss"]
