--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@codemirror/lang-javascript": "^6.2.4",
     "@foblex/flow": "^18.0.0",
     "@formulajs/formulajs": "^4.5.4",
     "@fullcalendar/angular": "^6.1.20",
@@ -57,6 +58,7 @@
     "@types/leaflet": "^1.9.21",
     "ace-builds": "^1.43.5",
     "angular-resizable-element": "^8.0.0",
+    "codemirror": "^6.0.2",
     "dayjs": "^1.11.19",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
