refactor: introduce agent orchestration with builder and query agents, replacing individual tools.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,7 +52,7 @@ services:
       - POSTGRES_MAX_CONNECTIONS=20
 
       # LLM
-      - LLM_DEFAULT_MODEL=gemini-2.5-flash
+      - LLM_DEFAULT_MODEL=gemini-3-pro-preview
       - OPENAI_API_KEY=
       - GEMINI_API_KEY=
       - ANTHROPIC_API_KEY=
