--- a/server/.env.example
+++ b/server/.env.example
@@ -43,7 +43,7 @@ POSTGRES_SSL=false
 POSTGRES_MAX_CONNECTIONS=20
 
 # LLM
-LLM_DEFAULT_MODEL=gemini-1.5-flash
+LLM_DEFAULT_MODEL=gemini-3-pro-preview
 OPENAI_API_KEY=sk-...
 GEMINI_API_KEY=AIza...
 ANTHROPIC_API_KEY=sk-ant-...
