--- a/client/package.json
+++ b/client/package.json
@@ -60,8 +60,11 @@
     "angular-resizable-element": "^8.0.0",
     "codemirror": "^6.0.2",
     "dayjs": "^1.11.19",
+    "dompurify": "^3.2.3",
+    "highlight.js": "^11.10.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "marked": "^15.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
     "quill": "^2.0.3",
@@ -73,6 +76,7 @@
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/dompurify": "^3.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.20",
     "jasmine-core": "~5.9.0",
